--- a/BreaksAPU/NSFPlayer/NSFPlayer.csproj
+++ b/BreaksAPU/NSFPlayer/NSFPlayer.csproj
@@ -18,6 +18,10 @@
  </PropertyGroup>
 
 <ItemGroup>
+  <PackageReference Include="SharpDX.DirectSound" Version="4.2.0" />
+</ItemGroup>
+
+<ItemGroup>
   <Compile Update="Properties\Resources.Designer.cs">
     <DesignTime>True</DesignTime>
     <AutoGen>True</AutoGen>
