--- a/BreaksAPU/NSFPlayer/NSFPlayer.csproj
+++ b/BreaksAPU/NSFPlayer/NSFPlayer.csproj
@@ -18,6 +18,7 @@
  </PropertyGroup>
 
 <ItemGroup>
+  <PackageReference Include="Be.Windows.Forms.HexBox.Net5" Version="1.8.0" />
   <PackageReference Include="SharpDX.DirectSound" Version="4.2.0" />
 </ItemGroup>
 
