--- a/Breaks6502/BreaksDebug/packages.config
+++ b/Breaks6502/BreaksDebug/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net472" />
+  <package id="Be.Windows.Forms.HexBox" version="1.6.1" targetFramework="net48" />
+  <package id="Newtonsoft.Json" version="13.0.2" targetFramework="net48" />
 </packages>
