--- a/BreaksAPU/NSFPlayerInterop/NSFPlayerInterop.vcxproj
+++ b/BreaksAPU/NSFPlayerInterop/NSFPlayerInterop.vcxproj
@@ -159,13 +159,19 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="AbstractBoard.h" />
+    <ClInclude Include="APUPlayerBoard.h" />
     <ClInclude Include="BankedSRAM.h" />
+    <ClInclude Include="Mock6502.h" />
     <ClInclude Include="NSFPlayerBoard.h" />
     <ClInclude Include="pch.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="APUPlayerBoard.cpp" />
+    <ClCompile Include="APUPlayerBoardDebug.cpp" />
     <ClCompile Include="BankedSRAM.cpp" />
     <ClCompile Include="dllmain.cpp" />
+    <ClCompile Include="Mock6502.cpp" />
     <ClCompile Include="NSFPlayerBoard.cpp" />
     <ClCompile Include="NSFPlayerBoardDebug.cpp" />
     <ClCompile Include="pch.cpp">
