--- a/BreaksAPU/NSFPlayerInterop/NSFPlayerInterop.vcxproj.filters
+++ b/BreaksAPU/NSFPlayerInterop/NSFPlayerInterop.vcxproj.filters
@@ -24,6 +24,15 @@
     <ClInclude Include="BankedSRAM.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="AbstractBoard.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="APUPlayerBoard.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Mock6502.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
@@ -39,6 +48,15 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="BankedSRAM.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="APUPlayerBoard.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="APUPlayerBoardDebug.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Mock6502.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
