--- a/BreaksAPU/NSFPlayerInterop/NSFPlayerInterop.vcxproj.filters
+++ b/BreaksAPU/NSFPlayerInterop/NSFPlayerInterop.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="BoardFactory.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="RegDumpProcessor.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
@@ -63,6 +66,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="BoardFactory.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="RegDumpProcessor.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
