--- a/Common/BaseBoardLib/Scripts/VS2022/BaseBoardLib.vcxproj.filters
+++ b/Common/BaseBoardLib/Scripts/VS2022/BaseBoardLib.vcxproj.filters
@@ -30,6 +30,12 @@
     <ClCompile Include="..\..\SRAM.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\Fake6502.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\RegDumpProcessor.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\LS139.h">
@@ -45,6 +51,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\..\SRAM.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Fake6502.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\RegDumpProcessor.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
