--- a/BreaksPPU/PPUPlayer/PPUPlayer.csproj
+++ b/BreaksPPU/PPUPlayer/PPUPlayer.csproj
@@ -18,6 +18,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Common\SharpTools\SharpTools.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Compile Update="Properties\Resources.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
