--- a/Breaks6502/BreaksDebug/BreaksDebug.csproj
+++ b/Breaks6502/BreaksDebug/BreaksDebug.csproj
@@ -29,6 +29,10 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <ProjectReference Include="..\..\Common\SharpTools\SharpTools.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<Compile Update="Properties\Resources.Designer.cs">
 			<DesignTime>True</DesignTime>
 			<AutoGen>True</AutoGen>
