--- a/Breaknes/BreaksCore/Scripts/VS2022/BreaksCore.vcxproj
+++ b/Breaknes/BreaksCore/Scripts/VS2022/BreaksCore.vcxproj
@@ -41,6 +41,8 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="..\..\PPUPlayerBoard.cpp" />
+    <ClCompile Include="..\..\PPUPlayerBoardDebug.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\..\Breaks6502\Breakasm\ASM.h" />
@@ -57,6 +59,7 @@
     <ClInclude Include="..\..\NSFMapper.h" />
     <ClInclude Include="..\..\NSFPlayerBoard.h" />
     <ClInclude Include="..\..\pch.h" />
+    <ClInclude Include="..\..\PPUPlayerBoard.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\..\Readme.md" />
