--- a/Common/BaseBoardLib/Scripts/VS2022/BaseBoardLib.vcxproj.filters
+++ b/Common/BaseBoardLib/Scripts/VS2022/BaseBoardLib.vcxproj.filters
@@ -36,6 +36,12 @@
     <ClCompile Include="..\..\RegDumpProcessor.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\LS32.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\LS161.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\LS139.h">
@@ -57,6 +63,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\..\RegDumpProcessor.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\LS32.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\LS161.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
