--- a/Mappers/Scripts/VS2022/Mappers.vcxproj.filters
+++ b/Mappers/Scripts/VS2022/Mappers.vcxproj.filters
@@ -24,12 +24,18 @@
     <ClInclude Include="..\..\pch.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\UNROM.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\NROM.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\..\pch.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\UNROM.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
