--- a/Mappers/Scripts/VS2022/Mappers.vcxproj
+++ b/Mappers/Scripts/VS2022/Mappers.vcxproj
@@ -19,12 +19,14 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\AOROM.h" />
     <ClInclude Include="..\..\NES_Header.h" />
     <ClInclude Include="..\..\NROM.h" />
     <ClInclude Include="..\..\pch.h" />
     <ClInclude Include="..\..\UNROM.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\AOROM.cpp" />
     <ClCompile Include="..\..\NROM.cpp" />
     <ClCompile Include="..\..\pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
