--- a/Mappers/Scripts/VS2022/Mappers.vcxproj.filters
+++ b/Mappers/Scripts/VS2022/Mappers.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="..\..\UNROM.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\AOROM.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\NROM.cpp">
@@ -36,6 +39,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\..\UNROM.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\AOROM.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
