wtf with iNES header description on nesdev wiki & mirroring??

--- a/BreaksPPU/PPUSim/Scripts/VS2022/PPUSim.vcxproj
+++ b/BreaksPPU/PPUSim/Scripts/VS2022/PPUSim.vcxproj
@@ -27,6 +27,7 @@
     <ClCompile Include="..\..\fsm.cpp" />
     <ClCompile Include="..\..\hv.cpp" />
     <ClCompile Include="..\..\hv_decoder.cpp" />
+    <ClCompile Include="..\..\log.cpp" />
     <ClCompile Include="..\..\mux.cpp" />
     <ClCompile Include="..\..\oam.cpp" />
     <ClCompile Include="..\..\par.cpp" />
@@ -54,6 +55,7 @@
     <ClInclude Include="..\..\fsm.h" />
     <ClInclude Include="..\..\hv.h" />
     <ClInclude Include="..\..\hv_decoder.h" />
+    <ClInclude Include="..\..\log.h" />
     <ClInclude Include="..\..\mux.h" />
     <ClInclude Include="..\..\oam.h" />
     <ClInclude Include="..\..\par.h" />
