--- a/BreaksPPU/PPUSim/Scripts/VS2022/PPUSim.vcxproj.filters
+++ b/BreaksPPU/PPUSim/Scripts/VS2022/PPUSim.vcxproj.filters
@@ -75,6 +75,9 @@
     <ClCompile Include="..\..\pclk.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\log.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\pch.h">
@@ -132,6 +135,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\..\patgen.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\log.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
